- Sort of fixing some IE 6 and FF 3 layout bugs with wide publications. - Minified parser. - minify target in build.xml

--- a/trunk/Orchard/web/orc.css
+++ b/trunk/Orchard/web/orc.css
@@ -33,8 +33,6 @@
 	border: 1px solid #666;
 	margin-top: -1px;
 	overflow: auto;
-	/* Fix IE6 display bug */
-	display: inline-block;
 }
 .orc-stop, .orc-close, .orc-run {
 	border: 1px outset;
@@ -75,8 +73,6 @@
 .orc-prompt-input {
 	padding-right: 46px;
 	position: relative;
-	/* force IE to calculate layout correctly */
-	display: inline-block;
 }
 .orc-prompt-input input {
 	border: 3px double #ddd;
@@ -110,4 +106,21 @@
 	background-image: url("/orchard/images/loading.gif");
 	background-repeat: no-repeat;
 	float: left;
+}
+
+/* IE-specific hacks */
+
+.orc-prompts {
+	_display: inline-block;
+	min-height: 0;
+}
+.orc-events {
+	_width: 100%;
+	min-height: 0;
+	/* without this, the horizontal scrollbar covers the content */
+	_padding-bottom: 15px;
+}
+.orc-prompt-input {
+	_display: inline-block;
+	min-height: 0;
 }
